--- a/promos.html
+++ b/promos.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
+        <meta name="keyboards" content="pizza, pizza por metro, empanadas, milanesas, sandwich, papas fritas" />
+        <meta name="description" content=" la mejor pizzeria por metro de zona oeste, probanos!">
         <meta name="author" content="" />
-        <title>Don Flores-Pizzaxmetro</title>
+        <title>Don Flores-Nuestro menú</title>
         <link rel="icon" type=".ico" href="assets/img/don flores.ico">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" type="text/css" />
         <!-- Google fonts-->
@@ -13,49 +14,51 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
         <link rel="stylesheet" type="text/css" href="css/estilos.css">
-        <link rel="stylesheet" type="text/css" href="promos/estilo.css">
+       
         <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     </head>
     <body class="modification">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-warning mx-auto">
-          <a class="navbar-brand" href="#">Don Flores <i class="fas fa-pizza-slice"></i></a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="promos.html">Menu</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="sucursales.html">Sucursales</a>
-              </li>
-             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Conócenos
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="contacto.html">Contacto</a></li>
-                <li><a class="dropdown-item" href="sobrenosotros.html">Sobre nosotros</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="https://api.whatsapp.com/send?phone=541161889674&text=Buenas%20noches%2C%20me%20pasas%20la%20carta%20por%20favor%3F%20" target="_BLANK">Realiza tu compra</a></li>
-              </ul>
-            </li>
-            </ul>
-          </div>
-        </nav>
+         <header>
+           <nav class="navbar navbar-expand-lg navbar-light bg-warning mx-auto">
+              <div class="container-fluid">
+                <a class="navbar-brand" href="index.html"><h1>Don Flores <i class="fas fa-pizza-slice"></i></h1></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                  <ul class="navbar-nav">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="promos.html">Menú</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="sucursales.html">Sucursales</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Más
+                      </a>
+                      <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <li><a class="dropdown-item" href="sobrenosotros.html">Sobre nosotros</a></li>
+                        <li><a class="dropdown-item" href="contacto.html">Contacto</a></li>
+                        <li><a class="dropdown-item" href="https://api.whatsapp.com/send?phone=541161889674&text=Buenas%20noches%2C%20me%20pasas%20la%20carta%20por%20favor%3F%20" target="_BLANK">Realiza tu compra</a></li>
+                      </ul>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </nav>
+        </header>
         <!-- Masthead-->
         <div id="banner" class="d-flex align-items-center">
           <span></span>
             <div class="container">
                  <div class="row">
                      <div class="col-lg-7 mx-auto text-center text-white">
-                        <p class="font-weight-bold title text-dark">Menú</p>
-             
+                        <p ><h2 class="font-weight-bold font-3rem text-dark">Menú</h2></p>
                      </div>
                 </div>
              </div>
@@ -64,11 +67,11 @@
       <div class="row">
         <div class="col-10 offset-1">
           <div class="py-4">
-            <p class="text-white font-weight-bold title2 ">
-            Date un gusto
+            <p >
+            <h3 class="text-white font-weight-bold font-2rem ">Date un gusto</h3>
             </p>
-            <p class="subtitle2 text-white">Conoce nuestras pizzas</p>
-            <p class="subtitle2 text-white">Consulta los gustos</p>
+            <h4 class="font-1.5rem text-white">Conoce nuestras pizzas</h4>
+            <h4 class="font-1rem text-white">Consulta los gustos</h4>
           </div>
           <div>
             <img src="media/donflores7.jpg" alt="pizzanapolitana" class="w-100 imgPizza">
@@ -77,7 +80,7 @@
       </div>
     </div>
     <div id="main2" class="container-fluid py-5">
-      <div class="font-weight-bold title2 text-center py-4">
+      <div class="font-weight-bold font-2rem text-center py-4">
         <p>
           Algunos gustos
         </p>
@@ -85,19 +88,19 @@
       <div class="row container-xl mx-auto">
         <div class="col-12 col-md-3 text-center">
           <img src="media/donflores13.jpg" alt="pizza">
-          <p class="subtitle2 mt-2">Jamon y morrones</p>
+          <p class="font-1.5rem mt-2">Jamon y morrones</p>
         </div>
         <div class="col-12 col-md-3 text-center">
           <img src="media/donflores12.jpg" alt="pizza">
-          <p class="subtitle2 mt-2">Fugazzeta</p>
+          <p class="font-1.5rem mt-2">Fugazzeta</p>
         </div>
         <div class="col-12 col-md-3 text-center">
           <img src="media/donflores10.jpg" alt="pizza">
-          <p class="subtitle2 mt-2">Calabreza</p>
+          <p class="font-1.5rem mt-2">Calabreza</p>
         </div>
         <div class="col-12 col-md-3 text-center">
-          <img src="media/donflores13.jpg" alt="pizza">
-          <p class="subtitle2 mt-2">Napolitana</p>
+          <img src="media/donflores13.png" alt="pizza">
+          <p class="font-1.5rem mt-2">Napolitana</p>
         </div>
       </div>
     </div>
