--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
+        <meta name="keyboards" content="pizza, pizza por metro, empanadas, milanesas, sandwich, papas fritas" />
+        <meta name="description" content=" La mejor pizzeria por metro de zona oeste, probanos!">
         <meta name="author" content="" />
         <title>Don Flores-Pizzaxmetro</title>
         <link rel="icon" type=".ico" href="assets/img/don flores.ico">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" type="text/css" />
+       
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -17,36 +19,39 @@
     </head>
     <body class="modification">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-warning mx-auto">
-          <a class="navbar-brand" href="#">Don Flores <i class="fas fa-pizza-slice"></i></a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="promos.html">Menu</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="sucursales.html">Sucursales</a>
-              </li>
-             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Conócenos
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="contacto.html">Contacto</a></li>
-                <li><a class="dropdown-item" href="sobrenosotros.html">Sobre nosotros</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="https://api.whatsapp.com/send?phone=541161889674&text=Buenas%20noches%2C%20me%20pasas%20la%20carta%20por%20favor%3F%20" target="_BLANK">Realiza tu compra</a></li>
-              </ul>
-            </li>
-            </ul>
-          </div>
-        </nav>
+         <header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-warning mx-auto">
+              <div class="container-fluid">
+                <a class="navbar-brand" href="index.html"><h1>Don Flores <i class="fas fa-pizza-slice"></i></h1></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                  <ul class="navbar-nav">
+                    <li class="nav-item">
+                      <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="promos.html">Menú</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="sucursales.html">Sucursales</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Más
+                      </a>
+                      <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <li><a class="dropdown-item" href="sobrenosotros.html">Sobre nosotros</a></li>
+                        <li><a class="dropdown-item" href="contacto.html">Contacto</a></li>
+                        <li><a class="dropdown-item" href="https://api.whatsapp.com/send?phone=541161889674&text=Buenas%20noches%2C%20me%20pasas%20la%20carta%20por%20favor%3F%20" target="_BLANK">Realiza tu compra</a></li>
+                      </ul>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </nav>
+        </header>
         <!-- Masthead-->
        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-indicators">
@@ -56,13 +61,13 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="assets/img/donflores7.jpg" class="d-block w-100" alt="pizzeria">
+              <img src="assets/img/donflores7.jpg" srcset="assets/img/donflores7-copia.jpg 576w, assets/img/donflores7.jpg" class="d-block w-100" alt="pizzeria">
             </div>
             <div class="carousel-item">
-              <img src="assets/img/donflores6.jpg" class="d-block w-100" alt="pizzeria">
+              <img src="assets/img/donflores6.jpg" srcset="assets/img/donflores6-copia.jpg 576w, assets/img/donflores6.jpg" class="d-block w-100" alt="pizzeria">
             </div>
             <div class="carousel-item">
-              <img src="assets/img/donflores13.jpg" class="d-block w-100" alt="pizzeria">
+              <img src="assets/img/donflores13.jpg" srcset="assets/img/donflores13-copia.jpg 576w, assets/img/donflores13.jpg" class="d-block w-100" alt="pizzeria">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -135,22 +140,22 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="assets/img/peruano.png" alt="..." />
-                            <h5>Encuentros</h5>
+                            <img class="img-fluid rounded-circle mb-3" src="assets/img/peruano.png" loading="lazy" alt="gente comiendo pizza" />
+                            <h4>Encuentros</h4>
                             <p class="font-weight-light mb-0">Estamos presentes siempre en tus reuniones.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="assets/img/pizza.png" alt="..." />
-                            <h5>Sabor</h5>
+                            <img class="img-fluid rounded-circle mb-3" src="assets/img/pizza.png" loading="lazy" alt="sabor de la pizza" />
+                            <h4>Sabor</h4>
                             <p class="font-weight-light mb-0">Nuestro sabor es unico.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="assets/img/menu3.png" alt="..." />
-                            <h5>Variedad</h5>
+                            <img class="img-fluid rounded-circle mb-3" src="assets/img/menu3.png" loading="lazy" alt="muchos gustos de pizzas" />
+                            <h4>Variedad</h4>
                             <p class="font-weight-light mb-0">Tenemos mas de 40 gustos de diferentes de pizzas, ¡Probanos!</p>
                         </div>
                     </div>
@@ -189,6 +194,7 @@
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
+        
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
